* 2005-05-07 Jeremy Sanders <jeremy@jeremysanders.net>
	- Complete data editing dialog
	- Add data new dialog
	
* 2005-05-04 Jeremy Sanders <jeremy@jeremysanders.net>
	- Put in Jamie Crummy's patch to show "Untitled" for new document
	
* 2005-05-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Take out toolbar position hack from mainwindow
	- More work on data edit dialog
	
* 2005-05-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- Axes on other side of graph are automatically reflected
	- Reflected text rotated by 90 rather than 270 degrees
	- Put property name on property context menu
	- Shortcut keys added to quitting dialog
	- Slight tooltip fixes in property editor
	- Property context menu added for items in widget tree
	- Widgets can now be renamed (Rename command added too)
	- Labels for properties can now have keyboard focus. This allows
	context menu to be used from keyboard.
	- Widget names cannot contain /
	
* 2005-05-01 Jeremy Sanders <jeremy@jeremysanders.net>
	- Put in patch from James Graham to choose from list of fonts
	- Use context menu for settings, rather than button
	- Add missing descr for marker and markerSize
	- View menu can show/hide dock windows
	
* 2005-04-28 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed colour of axis/tick labels

* 2005-04-25 Jeremy Sanders <jeremy@jeremysanders.net>
	- Allow subsettings to be set in Add command
	a__b maps to a/b, e.g. Add('xy', MarkerFill__color='red')
	- Numbers can be initial letter of dataset name
	
* 2005-04-23 Jeremy Sanders <jeremy@jeremysanders.net>
	- Twiddle rounding in axis.py to try to avoid off-by-one pixel bugs
	- Move distance calculation code into Distance setting
	
* 2005-04-22 Jeremy Sanders <jeremy@jeremysanders.net>
	- Display drop down list of units based on James Graham's patch
	- Use drop down list of datasets for appropriate settings
	
* 2005-04-21 Jeremy Sanders <jeremy@jeremysanders.net>
	- Widgets can now be added if a parent allows the widget as parent