@@ -178,8 +178,10 @@ class MainWindow(qt.QMainWindow):
              self.slotFileQuit, 'stock-quit.png', False, 'Ctrl+Q'),
             ('dataimport', 'Import data into Veusz', '&Import...', 'data',
              self.slotDataImport, 'stock-import.png', False, ''),
-            ('dataedit', 'Edit imported data', '&Edit...', 'data',
+            ('dataedit', 'Edit existing datasets', '&Edit...', 'data',
              self.slotDataEdit, None, False, ''),
+            ('datanew', 'Create new datasets', '&New...', 'data',
+             self.slotDataNew, None, False, ''),
             ('viewzoomin', 'Zoom into the plot', 'Zoom &In', 'view',
              self.slotViewZoomIn, 'stock-zoom-in.png', False, 'Ctrl++'),
             ('viewzoomout', 'Zoom out of the plot', 'Zoom &Out', 'view',
@@ -267,8 +269,13 @@ class MainWindow(qt.QMainWindow):
         d.show()
 
     def slotDataEdit(self):
-        """Display the import data dialog."""
+        """Edit existing datasets."""
         d = dialogs.dataeditdialog.DataEditDialog(self, self.document)
+        d.show()
+
+    def slotDataNew(self):
+        """Make new datasets."""
+        d = dialogs.dataeditdialog.DatasetNewDialog(self.document, self)
         d.show()
 
     def slotHelpHomepage(self):
